# src/routes/blog.ts
@@ -1,17 +1,19 @@
 import { Router } from "express"
 import { createPost, getAllPost, getPost, updatePost, deletePost, Likes ,unLikes} from "../controllers/blog"
 import upload from "../helper/multer"
-import passport from '../helper/passport'
+import Passport from "../helper/wait"
+import {isAuthenticated,isAdmin} from "../middleware/authorization"
+
 
 
 const blogRouter = Router()
-blogRouter.post('/', upload.single('image'),createPost)
+blogRouter.post('/',isAdmin, upload.single('image'),createPost)
 blogRouter.get('/:id', getPost)
 blogRouter.get('/', getAllPost)
-blogRouter.patch('/:id', updatePost)
-blogRouter.delete('/:id', deletePost)
-blogRouter.post("/:id/likes",Likes)
-blogRouter.post("/:id",unLikes)
+blogRouter.patch('/:id',isAdmin, updatePost)
+blogRouter.delete('/:id',isAdmin, deletePost)
+blogRouter.post("/:id/likes",isAuthenticated,Likes)
+blogRouter.post("/:id",isAuthenticated,unLikes)
 
 
 export default blogRouter
