# src/routes/message.ts
@@ -1,12 +1,13 @@
 import { Router } from "express";
 
 import { createMessage, getMessages, getMessage, deleteMessage, updateMessage} from "../controllers/message";
+import { isAdmin } from "../middleware/authorization";
 
 const messageRouter = Router();
 
 messageRouter.post("/", createMessage)
 messageRouter.get("/", getMessages)
-messageRouter.get("/:id",getMessage)
+messageRouter.get("/:id",isAdmin,getMessage)
 messageRouter.patch("/:id",updateMessage)
 messageRouter.delete("/:id",deleteMessage)
 
